# templates_lp3

./: produtos.csv  pyproject.toml
templates_lp3/: app.py  arquivo.py
templates_lp3/static/: style.css
templates_lp3/templates/: base1.html  base2.html  cadastroproduto.html  cnpj.html  comousar.html  comoutilizar.html  contato.html  cpf.html  home.html  politicadeprivacidade.html  produtos.html  termosdeuso.html
